fixes/improv.css
/* ************************************************************************** */
/*                                                                            */
/*                                                        :::      ::::::::   */
/*   improv.css                                         :+:      :+:    :+:   */
/*                                                    +:+ +:+         +:+     */
/*   By: mde-maga <mde-maga@student.42.fr>          +#+  +:+       +#+        */
/*                                                +#+#+#+#+#+   +#+           */
/*   Created: 2021/11/28 01:00:01 by fbes              #+#    #+#             */
/*   Updated: 2026/04/20 09:32:53 by mde-maga         ###   ########.fr       */
/*                                                                            */
/* ************************************************************************** */

/**
 * This CSS file is used for general improvements on Intra. It is always loaded,
 * whether in dark or light mode does not matter.
 */

/* remove horizontal scrollbar, as it causes visual glitches anyways */
html {
	overflow-x: hidden !important;
}

/* Windows Futura font-family fix */
.futura {
	font-family: "Futura PT", "Futura", "futura", "futura-pt", "Helvetica", Verdana, Arial, Sans-Serif !important;
}

/* Windows Futura font family fix (BOLD) */
.modal-v2 .modal-header,
.event-modal .head h4,
.exam-modal .head h4,
#admin-user h3,
.app-sidebar-left .marked-title {
	font-family: "Futura PT", "Futura", "futura", "futura-pt", "Helvetica", Verdana, Arial, Sans-Serif !important;
	font-weight: 700 !important;
}

/* warning for Intra v3 incompatibility */
#improved-intra-v3-incompatibility-warning {
	position: fixed;
	bottom: 0;
	left: 80px;
	width: calc(100% - 80px);
	font-family: "Futura PT", "Futura", "futura", "futura-pt", "Helvetica", Verdana, Arial, Sans-Serif;
	background-color: #fcf8e3;
	color: #8a6d3b;
	text-align: center;
	padding: 8px;
	font-weight: bold;
	font-size: 14px;
	box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);
	z-index: 9999;
}
#improved-intra-v3-incompatibility-warning a,
#improved-intra-v3-incompatibility-warning-close {
	color: #b17e27 !important;
	cursor: pointer !important;
}
#improved-intra-v3-incompatibility-warning a:hover,
#improved-intra-v3-incompatibility-warning a:focus {
	color: #c27e08 !important;
	text-decoration: underline !important;
}
#improved-intra-v3-incompatibility-warning-close:hover,
#improved-intra-v3-incompatibility-warning-close:focus {
	color: #c27e08 !important;
	text-shadow: 0 0 1px #8a6d3b !important;
}

/* off-screen account dropdown menu fix for short usernames */
.main-navbar-user-nav .dropdown .dropdown-menu {
	left: unset !important;
	right: 0px !important;
}

/* fix 100 % scores on ratings on feedback page */
li.scaleteam-list-item .rating {
	flex-basis: 50px !important;
}

/* set default cursor for tooltips */
.tooltip {
	cursor: default !important;
}

/* add box shadow to tooltips */
.tooltip-content {
	box-shadow: 0px 0px 1px -1px #000 !important;
}

/* fix border radius for tooltip user images */
.tooltip-content .tooltip-img.rounded[style*="intra.42.fr/users/"] {
	background-size: cover !important;
	width: 60px !important;
	height: 60px !important;
	border-radius: 30px !important;
}

/* force user profile pictures to always cover the whole element */
.user-profile-picture {
	background-size: cover !important;
}

/* add blur to profile banners behind containers */
.profile-item .user-progress .progress,
.profile-item .user-header-box,
.profile-item .user-primary .user-infos .user-infos-sub,
.profile-item .user-primary .user-infos .button-actions {
	background: rgba(32, 32, 38, 0.75) !important;
	backdrop-filter: blur(4px) !important;
	border-radius: 4px !important;
}

/* slightly changed opacity for customized profiles */
.profile-item .profile-banner.customized .user-progress .progress,
.profile-item .profile-banner.customized .user-header-box,
.profile-item .profile-banner.customized .user-primary .user-infos .user-infos-sub,
.profile-item .profile-banner.customized .user-primary .user-infos .button-actions {
	background: rgba(32, 32, 38, 0.6) !important;
}

/* fix z-index for tooltips on action buttons in user banners */
.profile-item .user-primary .user-infos .button-actions {
	z-index: 1;
	margin-right: 10px !important;
}

/* fix hover color for profile actions in profile banners */
.profile-item .user-primary .user-infos .button-actions a:hover {
	color: inherit !important;
}

/* fix vertical alignment for login name on user banners */
.profile-name .login {
	margin-top: 17px !important;
}

/* scrollbar fix for main page overview */
.home-middle-td {
	overflow: auto !important;
}

/* fix feedback logs margin left and right on profile pages */
.profile-title a.simple-link[href*="/feedbacks"] {
	margin-left: 0px !important;
}

/* bugfix overflow in achievements / projects selector on user profiles */
.profile-title[data-toggle] {
	text-align: center !important;
	padding-top: 8px !important;
	overflow: hidden !important;
	text-overflow: ellipsis !important;
}

/* fix font-weight for project description headers */
.project-desc-item h4 {
	font-weight: bold !important;
}

/* hide empty project description elements (not working if newline is there, which is often the case) */
.project-desc-item:empty,
.project-desc-item:blank {
	display: none !important;
}

/* horizontally align main project-item marks (on user profiles) */
.main-project-item .pull-right {
	text-align: center !important;
	width: 54px !important;
	white-space: nowrap !important;
}

/* 2 stars for outstanding projects with 2 outstanding flags */
.icon-2stars {
	display: inline-flex;
	align-items: center;
	justify-content: center;
	vertical-align: middle;
	transform: translateX(-3px); /* to make sure the mark aligns */
}
.icon-2stars .icon-star-1 {
	font-size: 0.7em;
	line-height: 1;
	margin: 0;
	padding: 0;
	transform: translateX(-3px);
}
/* ... */

